[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osmo-prepare"
version = "0.1.0"
description = "Utility to join videos split by DJI Osmo Action camera"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Benedict" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=14.3.2",
]

[project.scripts]
osmo-prepare = "osmo_prepare.main:main"
osmo-join = "osmo_prepare.join:main"
